gettext-macros/tests/ui/unmatched_op.stderr
error: Unmatched `{` in format string. If you intended to print `{`, you can escape it using `{{`
 --> tests/ui/unmatched_op.rs:4:11
  |
4 |     gettext!("Hello, {!");
  |              ^^^^^^^^^^^
